text alignment (temp fix)

--- a/staticfiles/css/dogGallery.css
+++ b/staticfiles/css/dogGallery.css
@@ -51,7 +51,7 @@
   color: rgb(255, 255, 255);
   width: auto;
   font-size: 18px;
-  margin-bottom: -60px;
+  margin-bottom: -47px;
   border: solid black 3px;
   border-left: none;
   border-right: none;
